[PN-16003] fix: post merge